<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/newsFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.home.fragment.NewsFragment"
        android:label="@string/news_menu"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/racingFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.home.fragment.RacingFragment"
        android:label="@string/racing_menu"
        tools:layout="@layout/fragment_racing" />

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.home.fragment.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/standingsFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.home.fragment.StandingsFragment"
        android:label="@string/standings_menu"
        tools:layout="@layout/fragment_standings" />

    <fragment
        android:id="@+id/juniorCategoriesFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.home.fragment.JuniorCategoriesFragment"
        android:label="@string/junior_menu"
        tools:layout="@layout/fragment_junior_categories"></fragment>

</navigation>