<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/f3_navigation"
    app:startDestination="@id/f3HomeFragment">

    <fragment
        android:id="@+id/f3HomeFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.junior.fragment.F3HomeFragment"
        android:label="@string/formula_3"
        tools:layout="@layout/fragment_f3_home">
        <action
            android:id="@+id/to_carBio_formula3"
            app:destination="@id/f3CarBioFragment" />
        <action
            android:id="@+id/to_juniorResults_formula3"
            app:destination="@id/juniorResultsFragment" />
        <action
            android:id="@+id/to_juniorEntryList_formula3"
            app:destination="@id/juniorEntryListFragment" />
        <action
            android:id="@+id/to_juniorCalendar_formula3"
            app:destination="@id/juniorCalendarFragment" />
        <action
            android:id="@+id/to_juniorDriverStandings_formula3"
            app:destination="@id/juniorDriverStandingsFragment" />
        <action
            android:id="@+id/to_juniorConstructorStandings_formula3"
            app:destination="@id/juniorConstructorStandingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/f3CarBioFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.junior.fragment.F3CarBioFragment"
        android:label="@string/the_formula_3_car"
        tools:layout="@layout/fragment_f3_car_bio">

    </fragment>

    <fragment
        android:id="@+id/juniorResultsFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.junior.fragment.JuniorResultsFragment"
        android:label="@string/results"
        tools:layout="@layout/fragment_junior_results">

    </fragment>

    <fragment
        android:id="@+id/junior_news"
        android:name="com.the_coffe_coders.fastestlap.ui.junior.fragment.JuniorNewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_junior_news" />

    <fragment
        android:id="@+id/juniorEntryListFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.junior.fragment.JuniorEntryListFragment"
        android:label="@string/entry_list"
        tools:layout="@layout/fragment_junior_entry_list" />

    <fragment
        android:id="@+id/juniorCalendarFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.junior.fragment.JuniorCalendarFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_junior_calendar" />

    <fragment
        android:id="@+id/juniorDriverStandingsFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.junior.fragment.JuniorDriverStandingsFragment"
        android:label="@string/drivers"
        tools:layout="@layout/fragment_junior_driver_standings" />

    <fragment
        android:id="@+id/juniorConstructorStandingsFragment"
        android:name="com.the_coffe_coders.fastestlap.ui.junior.fragment.JuniorConstructorStandingsFragment"
        android:label="@string/constructors"
        tools:layout="@layout/fragment_junior_constructor_standings" />

</navigation>
