<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/driver_history_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_surface_dark"
    android:orientation="horizontal"
    android:paddingStart="4dp"
    android:paddingTop="10dp"
    android:paddingEnd="4dp"
    android:paddingBottom="10dp"
    tools:context=".ui.bio.DriverBioActivity">

    <TextView
        android:id="@+id/season_year"
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/year"
        android:textColor="@color/timer_gray" />

    <TextView
        android:id="@+id/driver_position"
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/pos"
        android:textColor="@color/timer_gray" />

    <TextView
        android:id="@+id/team_name"
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.4"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/team"
        android:textColor="@color/timer_gray" />

    <TextView
        android:id="@+id/driver_points"
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/points_abbr"
        android:textColor="@color/timer_gray" />

    <TextView
        android:id="@+id/driver_wins"
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/wins_abbr"
        android:textColor="@color/timer_gray" />

    <TextView
        android:id="@+id/driver_podiums"
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/pod"
        android:textColor="@color/timer_gray" />

</LinearLayout>