<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constructor_bio_table_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/card_surface_dark"
    android:orientation="horizontal"
    android:paddingStart="4dp"
    android:paddingTop="10dp"
    android:paddingEnd="4dp"
    android:paddingBottom="10dp"
    tools:context=".ui.bio.ConstructorBioActivity">

    <TextView
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/year"
        android:textColor="@color/timer_gray" />

    <TextView
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/pos"
        android:textColor="@color/timer_gray" />

    <TextView
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/points_abbr"
        android:textColor="@color/timer_gray" />

    <TextView
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/wins_abbr"
        android:textColor="@color/timer_gray" />

    <TextView
        style="@style/t10UpperCaseBoldWhiteLineLimited"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/pod"
        android:textColor="@color/timer_gray" />

</LinearLayout>
