<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_activity_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background_color">

    <LinearLayout
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:importantForAccessibility="no"
            app:srcCompat="@drawable/iconfl">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/orbitron_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="35sp">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/orbitron_bold"
            android:text="@string/already_registered"
            android:textColor="@color/white"
            android:textSize="@dimen/layout_subtitle_text_size">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/very_round_background"
            android:hint="@string/email"
            android:textColorHint="@color/black"
            app:boxStrokeErrorColor="@color/ferrari_secondary"
            app:cursorColor="@color/black"
            app:cursorErrorColor="@color/ferrari_secondary"
            app:startIconDrawable="@drawable/email_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/very_round_background"
                android:fontFamily="@font/orbitron_regular"
                android:inputType="textEmailAddress"
                android:textColor="@color/grey_card"
                android:textColorHint="@color/black"
                android:textSize="@dimen/body_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="?attr/textInputOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@drawable/very_round_background"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            app:boxStrokeErrorColor="@color/ferrari_secondary"
            app:cursorColor="@color/black"
            app:cursorErrorColor="@color/ferrari_secondary"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/black"
            app:startIconDrawable="@drawable/password_icon"
            app:startIconTint="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/very_round_background"
                android:fontFamily="@font/orbitron_regular"
                android:inputType="textPassword"
                android:textColor="@color/grey_card"
                android:textColorHint="@color/black"
                android:textSize="@dimen/body_text_size" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgotten_password_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/orbitron_bold"
            android:gravity="start|center"
            android:text="@string/missing_password"
            android:textColor="@color/ferrari_secondary"
            android:textSize="@dimen/layout_subtitle_text_size"
            app:rippleColor="@android:color/transparent" />

        <Button
            android:id="@+id/LoginButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="50dp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/orbitron_bold"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/layout_subtitle_text_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/orbitron_bold"
            android:text="@string/not_registered"
            android:textColor="@color/white"
            android:textSize="@dimen/layout_subtitle_text_size">

        </TextView>

        <Button
            android:id="@+id/RegisterButton"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/orbitron_bold"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/layout_subtitle_text_size" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>